<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.whois.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/MessiLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/question"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/playerName1"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@mipmap/aita"
                android:id="@+id/aitaPic"
                android:onClick="theWrongPlayer"
                />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:layout_weight="1"
                android:src="@mipmap/messi"
                android:id="@+id/MessiPicture"
                />
        </LinearLayout>


    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/RonaldoLinearlayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/question"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/playerName2"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"

                    android:id="@+id/RonaldoPic"
                    android:src="@mipmap/ronaldo2" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:layout_weight="1"

                    android:id="@+id/RobbenPic"
                    android:src="@mipmap/robben" />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/KrossLinearlayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/question"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/playerName3"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/aita"
                    android:id="@+id/Atia2"

                    />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:layout_weight="1"
                    android:id="@+id/KrossPic"
                    android:src="@mipmap/tonikroos"
                    />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/salahLinearlayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/question"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/playerName4"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/salah"
                    android:id="@+id/salahPic"
                    />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:layout_weight="1"
                    android:id="@+id/hendersonPic"


                    android:src="@mipmap/henderson" />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/BaleLinearLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/question"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/playerName5"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/bale"
                    android:id="@+id/BalePic"
                    />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:layout_weight="1"
                    android:id="@+id/kakaPic"
                    android:src="@mipmap/kaka"

                    />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/NeymarLinearlayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/question"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/playerName6"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/neymar"
                    android:id="@+id/NeymarPic"
                    />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"

                    android:id="@+id/daniPic"

                    android:src="@mipmap/dani" />
            </LinearLayout>



        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:id="@+id/resultbt"/>


    </LinearLayout>


</ScrollView>
